--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,6 @@
     transform: rotate(360deg);
   }
 }
-/* .background {
-  background-image: url('../src/assets/pic/books.png');
-  background-size: cover;
-  background-position: center;
-  min-height: 100vh;
-} */
-
 ::-webkit-scrollbar {
   width: 12px; 
   height: 12px; 
@@ -91,7 +84,7 @@ html {
 }
 
 .Accessibility {
-  position: left; /* הגדרת הקונטיינר כמיקום יחסית */
+  position: 'left'; /* הגדרת הקונטיינר כמיקום יחסית */
   width: 0; /* או גובה מוגדר, תלוי בתוכן שלך */
   height:14%; /* או גובה מוגדר */
 }
